--- a/HibbaPhase4/templates/index.html
+++ b/HibbaPhase4/templates/index.html
@@ -63,16 +63,16 @@
                     {% endif %}
                 </form>
             </div>
-        
+
             <script>
                 const eventSource = new EventSource("/stream_rfid");
-        
-                eventSource.onmessage = function(event) {
+
+                eventSource.onmessage = function (event) {
                     const data = event.data.split('\n');
-        
+
                     data.forEach(line => {
                         const [key, value] = line.split(': ', 2);
-                        
+
                         switch (key) {
                             case 'user_id':
                                 document.getElementById('user_id').textContent = value;
@@ -92,68 +92,68 @@
                         }
                     });
                 };
-        
-                eventSource.onerror = function() {
+
+                eventSource.onerror = function () {
                     console.error("Error with SSE connection");
                 };
             </script>
 
-        <table>
-            <tr>
-                <td>
-                    <div class="card-container inline">
-                        <div class="ceiling-container fan-{{ 'on' if fan_status else 'off' }}">
-                            <div class="ceiling-fan horizontal left"></div>
-                            <div class="ceiling-fan horizontal right"></div>
-                            <div class="ceiling-fan vertical rotated top"></div>
-                            <div class="ceiling-fan vertical rotated bottom"></div>
-                        </div>
-                        <button id="fanButton">Turn On/Off</button>
-                        <div id="fanStatus">Status: {{ fan_status }}</div> <!-- Fan status -->
-                    </div>
-                </td>
-                <td>
-                    <div class="card-container inline" style="height: 300px; flex-direction: row;">
-                        <div class="top-content" style="width: 100%;">
-                            <h4><b>Light Intensity</b></h4>
-                        </div>
-                        <div class="frame center" style="margin: 50px;">
-                            <div class="slider-container">
-                                <div class="slider center">
-                                    <input class="center" type="range" min="0" max="1000" />
-                                </div>
-                                <div class="slider-value center">{{ light_intensity }}</div>
-                                <p class="light-status"></p>
-                                <p class="email-status">Email Status: {% if email_status %}Sent{% else %}Not Sent{%
-                                    endif %}</p>
+            <table>
+                <tr>
+                    <td>
+                        <div class="card-container inline">
+                            <div class="ceiling-container fan-{{ 'on' if fan_status else 'off' }}">
+                                <div class="ceiling-fan horizontal left"></div>
+                                <div class="ceiling-fan horizontal right"></div>
+                                <div class="ceiling-fan vertical rotated top"></div>
+                                <div class="ceiling-fan vertical rotated bottom"></div>
                             </div>
-                            <div class="wrapper" style="margin: 50px;">
-                                <div class="light">
-                                    <div id="light_intensity" class="bulb {% if light_status %}on{% endif %}"></div>
-                                    <span></span>
-                                    <span></span>
+                            <button id="fanButton">Turn On/Off</button>
+                            <div id="fanStatus">Status: {{ fan_status }}</div> <!-- Fan status -->
+                        </div>
+                    </td>
+                    <td>
+                        <div class="card-container inline" style="height: 300px; flex-direction: row;">
+                            <div class="top-content" style="width: 100%;">
+                                <h4><b>Light Intensity</b></h4>
+                            </div>
+                            <div class="frame center" style="margin: 50px;">
+                                <div class="slider-container">
+                                    <div class="slider center">
+                                        <input class="center" type="range" min="0" max="1000" />
+                                    </div>
+                                    <div class="slider-value center">{{ light_intensity }}</div>
+                                    <p class="light-status">Status: {{ 'ON' if light_status else 'OFF' }}</p>
+                                    <p class="email-status">Email Status: {% if light_status %}Sent{% else %}Not Sent{%
+                                        endif %}</p>
+                                </div>
+                                <div class="wrapper" style="margin: 50px;">
+                                    <div class="light">
+                                        <div id="light_intensity" class="bulb {% if light_status %}on{% endif %}"></div>
+                                        <span></span>
+                                        <span></span>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-    </div>
-    </td>
-    </tr>
-    <tr>
-        <td>
-            <div class="card-container" style="padding: 35px;">
-                <h4><b>Temperature</b></h4>
-                <div class="gauge temperature-gauge"></div>
-            </div>
+        </div>
         </td>
-        <td>
-            <div class="card-container" style="padding: 35px;">
-                <h4><b>Humidity</b></h4>
-                <div class="gauge humidity-gauge"></div>
-            </div>
-        </td>
-    </tr>
-    </table>
+        </tr>
+        <tr>
+            <td>
+                <div class="card-container" style="padding: 35px;">
+                    <h4><b>Temperature</b></h4>
+                    <div class="gauge temperature-gauge"></div>
+                </div>
+            </td>
+            <td>
+                <div class="card-container" style="padding: 35px;">
+                    <h4><b>Humidity</b></h4>
+                    <div class="gauge humidity-gauge"></div>
+                </div>
+            </td>
+        </tr>
+        </table>
     </div>
     </div>
 
@@ -187,9 +187,9 @@
                     }
 
                     $('body').toggleClass('on', data.light_status === 'ON');
-                $('.light-status').text('Status: ' + data.light_status);
-                $('.email-status').text('Email Status: ' + data.email_status);
-                $('.slider-value').text(data.light_intensity);
+                    $('.light-status').text('Status: ' + data.light_status);
+                    $('.email-status').text('Email Status: ' + data.email_status);
+                    $('.slider-value').text(data.light_intensity);
                 });
             }
 
