--- a/Phase4/templates/index.html
+++ b/Phase4/templates/index.html
@@ -38,74 +38,122 @@
                 </div>
                 <h4><b>User Profile</b></h4>
                 <img src="../static/images/avatar.jpg" alt="Avatar" class="avatar">
-                <b>User ID: {{ user }}</b>
-                <b>Name: {{ name }}</b>
-                <div class="input-container">
-                    <label for="temperature">Temperature Threshold:</label>
-                </div>
-                <div class="input-container">
-                    <label for="humidity">Humidity Threshold:</label>
-                </div>
-                <div class="input-container">
-                    <label for="light-intensity">Light Intensity Threshold:</label>
-                </div>
+                <b>User ID: <span id="user_id">{{ user_id }}</span></b>
+                <br>
+                <b>Name: <span id="user_name">{{ name }}</span></b>
+                <br>
+                <form id="profile_form" action="/update_profile" method="POST">
+                    <div class="input-container">
+                        <label for="temperature">Temperature Threshold:</label>
+                        <input type="text" id="temperature" name="temperature" value="{{ temp_threshold }}">
+                    </div>
+                    <div class="input-container">
+                        <label for="humidity">Humidity Threshold:</label>
+                        <input type="text" id="humidity" name="humidity" value="{{ humidity_threshold }}">
+                    </div>
+                    <div class="input-container">
+                        <label for="light-intensity">Light Intensity Threshold:</label>
+                        <input type="text" id="light-intensity" name="light_intensity"
+                            value="{{ light_intensity_threshold }}">
+                    </div>
+                    {% if user_id != "Null" %}
+                    <button type="submit" class="update-button">Update Values</button>
+                    {% else %}
+                    <button type="submit" class="update-button" disabled>Update Values</button>
+                    {% endif %}
+                </form>
             </div>
-            <table>
-                <tr>
-                    <td>
-                        <div class="card-container inline">
-                            <div class="ceiling-container fan-{{ 'on' if fan_status else 'off' }}">
-                                <div class="ceiling-fan horizontal left"></div>
-                                <div class="ceiling-fan horizontal right"></div>
-                                <div class="ceiling-fan vertical rotated top"></div>
-                                <div class="ceiling-fan vertical rotated bottom"></div>
-                            </div>
-                            <button id="fanButton">Turn On/Off</button>
-                            <div id="fanStatus">Status: {{ fan_status }}</div> <!-- Fan status -->
+        
+            <script>
+                const eventSource = new EventSource("/stream_rfid");
+        
+                eventSource.onmessage = function(event) {
+                    const data = event.data.split('\n');
+        
+                    data.forEach(line => {
+                        const [key, value] = line.split(': ', 2);
+                        
+                        switch (key) {
+                            case 'user_id':
+                                document.getElementById('user_id').textContent = value;
+                                break;
+                            case 'name':
+                                document.getElementById('user_name').textContent = value;
+                                break;
+                            case 'temp_threshold':
+                                document.getElementById('temperature').value = value;
+                                break;
+                            case 'humidity_threshold':
+                                document.getElementById('humidity').value = value;
+                                break;
+                            case 'light_intensity_threshold':
+                                document.getElementById('light-intensity').value = value;
+                                break;
+                        }
+                    });
+                };
+        
+                eventSource.onerror = function() {
+                    console.error("Error with SSE connection");
+                };
+            </script>
+
+        <table>
+            <tr>
+                <td>
+                    <div class="card-container inline">
+                        <div class="ceiling-container fan-{{ 'on' if fan_status else 'off' }}">
+                            <div class="ceiling-fan horizontal left"></div>
+                            <div class="ceiling-fan horizontal right"></div>
+                            <div class="ceiling-fan vertical rotated top"></div>
+                            <div class="ceiling-fan vertical rotated bottom"></div>
                         </div>
-                    </td>
-                    <td>
-                        <div class="card-container inline" style="height: 300px; flex-direction: row;">
-                            <div class="top-content" style="width: 100%;">
-                                <h4><b>Light Intensity</b></h4>
-                            </div>
-                            <div class="frame center" style="margin: 50px;">
-                                <div class="slider-container">
-                                    <div class="slider center">
-                                        <input class="center" type="range" min="0" max="1000" />
-                                    </div>
-                                    <div class="slider-value center">{{ light_intensity }}</div>
-                                    <p class="light-status"></p>
-                                    <p class="email-status">Email Status: {% if email_status %}Sent{% else %}Not Sent{%
-                                        endif %}</p>
+                        <button id="fanButton">Turn On/Off</button>
+                        <div id="fanStatus">Status: {{ fan_status }}</div> <!-- Fan status -->
+                    </div>
+                </td>
+                <td>
+                    <div class="card-container inline" style="height: 300px; flex-direction: row;">
+                        <div class="top-content" style="width: 100%;">
+                            <h4><b>Light Intensity</b></h4>
+                        </div>
+                        <div class="frame center" style="margin: 50px;">
+                            <div class="slider-container">
+                                <div class="slider center">
+                                    <input class="center" type="range" min="0" max="1000" />
                                 </div>
-                                <div class="wrapper" style="margin: 50px;">
-                                    <div class="light">
-                                        <div id="light_intensity" class="bulb {% if light_status %}on{% endif %}"></div>
-                                        <span></span>
-                                        <span></span>
-                                    </div>
+                                <div class="slider-value center">{{ light_intensity }}</div>
+                                <p class="light-status"></p>
+                                <p class="email-status">Email Status: {% if email_status %}Sent{% else %}Not Sent{%
+                                    endif %}</p>
+                            </div>
+                            <div class="wrapper" style="margin: 50px;">
+                                <div class="light">
+                                    <div id="light_intensity" class="bulb {% if light_status %}on{% endif %}"></div>
+                                    <span></span>
+                                    <span></span>
                                 </div>
                             </div>
                         </div>
-        </div>
+                    </div>
+    </div>
+    </td>
+    </tr>
+    <tr>
+        <td>
+            <div class="card-container" style="padding: 35px;">
+                <h4><b>Temperature</b></h4>
+                <div class="gauge temperature-gauge"></div>
+            </div>
         </td>
-        </tr>
-        <tr>
-            <td>
-                <div class="card-container" style="padding: 35px;">
-                    <h4><b>Temperature</b></h4>
-                    <div class="gauge temperature-gauge"></div>
-                </div>
-            </td>
-            <td>
-                <div class="card-container" style="padding: 35px;">
-                    <h4><b>Humidity</b></h4>
-                    <div class="gauge humidity-gauge"></div>
-                </div>
-            </td>
-        </tr>
-        </table>
+        <td>
+            <div class="card-container" style="padding: 35px;">
+                <h4><b>Humidity</b></h4>
+                <div class="gauge humidity-gauge"></div>
+            </div>
+        </td>
+    </tr>
+    </table>
     </div>
     </div>
 
@@ -129,7 +177,7 @@
 
             function updateLightStatus() {
                 $.get('/light_status', function (data) {
-                    // Update the light bulb class based on the light status
+
                     if (data.light_status === 'ON') {
                         // Turn on the light bulb
                         $('.bulb').addClass('on');
@@ -138,24 +186,19 @@
                         $('.bulb').removeClass('on');
                     }
 
-                    // Toggle the body class based on the light status
                     $('body').toggleClass('on', data.light_status === 'ON');
-
-                    // Update the light status text
-                    $('.light-status').text('Status: ' + data.light_status);
+                $('.light-status').text('Status: ' + data.light_status);
+                $('.email-status').text('Email Status: ' + data.email_status);
+                $('.slider-value').text(data.light_intensity);
                 });
             }
 
-            // Initial call to update light status
+            setInterval(updateLightStatus, 1000);
             updateLightStatus();
-
-            // Set interval to update light status every 5 seconds
-            setInterval(updateLightStatus, 5000);
 
             // Toggle LED2 (GPIO 5) when the button is clicked
             $('#toggle_button').click(function () {
                 $.get('/toggle', function () {
-                    // Update the background gradient and text color based on the light status
                     if ($('#toggle_button').prop('checked')) {
                         // Light is on
                         $('body').css({
@@ -168,19 +211,6 @@
                             'background': 'linear-gradient(90deg, #2C3E50, #34495E)',
                             'color': 'white'
                         });
-                    }
-                });
-            });
-
-            // Event listener for the fan toggle button
-            $('#fanButton').click(function () {
-                $.get('/toggle_fan', function () {
-                    // Toggle the 'on' class on the fan button
-                    var fanButton = $('#fanButton');
-                    if (fanButton.hasClass('on')) {
-                        fanButton.removeClass('on').text('Turn On');
-                    } else {
-                        fanButton.addClass('on').text('Turn Off');
                     }
                 });
             });
@@ -205,11 +235,14 @@
             function updateSensorData() {
                 $.get('/sensor_data', function (data) {
                     if ('temperature' in data && 'humidity' in data) {
+                        let temperatureValue = typeof data.temperature === 'number' ? data.temperature.toFixed(2) : '';
+                        let humidityValue = typeof data.humidity === 'number' ? data.humidity.toFixed(2) : '';
+
                         temperatureGauge = new GaugeChart('.temperature-gauge', {
                             initialValue: data.temperature,
                             higherValue: 60,
                             title: 'Temperature',
-                            subtitle: data.temperature.toFixed(2) + '°C',
+                            subtitle: temperatureValue !== '' ? temperatureValue + '°C' : '',
                             customTicks: [0, 10, 20, 30, 40, 50, 60]
                         });
 
@@ -217,16 +250,14 @@
                             initialValue: data.humidity,
                             higherValue: 100,
                             title: 'Humidity',
-                            subtitle: data.humidity.toFixed(2) + '%',
+                            subtitle: humidityValue !== '' ? humidityValue + '%' : '',
                             customTicks: [0, 20, 40, 60, 80, 100]
                         });
 
                         temperatureGauge.init();
                         humidityGauge.init();
-                        temperatureGauge.update(temperatureGauge, temperatureGauge.toFixed(2) + '°C');
-                        humidityGauge.update(humidityGauge, humidityGauge.toFixed(2) + '%');
-                    } else {
-                        console.error('Invalid data received from server.');
+                        temperatureGauge.update(data.temperature, temperatureValue !== '' ? temperatureValue + '°C' : '');
+                        humidityGauge.update(data.humidity, humidityValue !== '' ? humidityValue + '%' : '');
                     }
                 });
             }
